--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -90,7 +90,7 @@
 
 /* About */
 .bg-image {
-    background-image: url(../images/img-header-2.webp);
+    background-image: url(../images/portfolio_cover.webp);
     background-position: 0px -56%;
     background-size: cover;
     /* margin-top: 25px; */
