--- a/templates/index.html
+++ b/templates/index.html
@@ -17,6 +17,9 @@
                 <a href="#projects" class="nav-link">Projects</a>
             </li>
             <li class="nav-item">
+              <a href="#work" class="nav-link">Work</a>
+            </li>
+            <li class="nav-item">
                 <a href="https://www.medium.com/@macrodrigues" target="_blank" class="nav-link">Blog</a>
             </li>
             <li class="nav-item">
@@ -422,6 +425,100 @@
         </div>
         <!-- End -->
 </div>
+
+<!--Paid Work Section-->
+<div id="work" style="background-color: #121409;">
+  <div class="other-header">
+    <h1 class="other-title" style="color: rgb(255, 255, 255);">Paid work</h1>
+  </div>
+  <div>
+    <div class="row fade-in" >
+
+      <!-- Work item -->
+      <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
+        <div class="bg-white rounded shadow-sm" style="background-color: #121409 !important;">
+          <a href="https://market.oceanprotocol.com/asset/did:op:586e4f0873fb54ab9c6f81036d72953ca4e4c2d04de129b677f4c624ccf93e27">
+            <img src="static/images/work/challenge_transport.webp" target="_blank" alt="" class="img-fluid card-img-top">
+          </a>
+          <div class="p-4">
+            <h5 class="title-img-gallery" style="color: rgb(218, 218, 218);">Won the second place 🥈 in the Transport Risk Mitigation challenge</h5>
+            <p class="small text-muted mb-0" style="color: #6e8923 !important;;">EDA and ML models on to Prevent Transportation Risks with IoT data. </p>
+            <div class="project-category" style="background-color: rgb(62, 75, 116); color: wheat">
+              <p>Reporting</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Work item -->
+      <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
+        <div class="bg-white rounded shadow-sm" style="background-color: #121409 !important;">
+          <a href="https://market.oceanprotocol.com/asset/did:op:7a32ff999b0e6a1c6cb44ab0d5dbca24a90b73015bcea47fde955ea71b79e154">
+            <img src="static/images/work/challenge_real_estate.webp" target="_blank" alt="" class="img-fluid card-img-top">
+          </a>
+          <div class="p-4">
+            <h5 class="title-img-gallery" style="color: rgb(218, 218, 218);">Won the third place 🥉 in the Dubai Real Estate Sales Forecasting challenge</h5>
+            <p class="small text-muted mb-0" style="color: #6e8923 !important;;">Reporting the steps to predict the sales transaction amounts of Dubai
+              properties.
+            </p>
+            <div class="project-category" style="background-color: rgb(62, 75, 116); color: wheat">
+              <p>Reporting</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- End -->
+
+      <!-- Work item -->
+      <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
+        <div class="bg-white rounded shadow-sm" style="background-color: #121409 !important;">
+          <a
+            href="https://techjury.net/blog/geo-targeting-with-proxies/">
+            <img src="static/images/work/brightdata_geo.webp" target="_blank" alt=""
+              class="img-fluid card-img-top">
+          </a>
+          <div class="p-4">
+            <h5 class="title-img-gallery" style="color: rgb(218, 218, 218);">Geo-targeting with Proxies: Extracting Location-Based Data using the Scraping Browser</h5>
+            <p class="small text-muted mb-0" style="color: #6e8923 !important;;">Technical writing about geo-targeting with Bright Data Scraping Browser </p>
+            <div class="project-category" style="background-color: rgb(145, 87, 15); color: wheat">
+              <p>Technical Writing</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- End -->
+
+      <!-- Work item -->
+      <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
+        <div class="bg-white rounded shadow-sm" style="background-color: #121409 !important;">
+          <a href="https://www.upwork.com/freelancers/~01185447baa36a1b77">
+            <img src="static/images/work/upwork_image.webp" target="_blank" alt=""
+              class="img-fluid card-img-top">
+          </a>
+          <div class="p-4">
+            <h5 class="title-img-gallery"style="color: rgb(218, 218, 218);">Data Analysis and data manipulation tasks on Upwork</h5>
+            <p class="small text-muted mb-0" style="color: #6e8923 !important;">I'm always trying to enroll in more and more tasks on Upwork, such as Data Science, Technical writing and ML.</p>
+            <div class="project-category" style="background-color: #6fda44; color: rgb(0, 0, 0)">
+              <p>Upwork</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- End -->
+
+      <!-- Work experience -->
+      <div class="icon-about-container" style="text-align: center; justify-items: center; margin: auto; margin-top: 2%;">
+        <h3 class="subtitle" style="color: white !important;">Companies I've worked for</h3>
+        <div class="icon-about-align">
+          <p class="p-img-icon">
+            <img alt="cnes" width="110px" src="static/images/jobs/cnes.webp" class="lang-img-icon" />
+          </p>
+          <p class="p-img-icon">
+            <img alt="teledyne" width="200px" src="static/images/jobs/teledyne.webp" class="lang-img-icon" style="padding-bottom: 12%;"/>
+          </p>
+        </div>
+      </div>
+    </div>
 
 <!-- contact section -->
 <div class="colored-section fade-in" id="contact">
