added techjury article

--- a/templates/index.html
+++ b/templates/index.html
@@ -491,6 +491,23 @@
       <!-- Work item -->
       <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
         <div class="bg-white rounded shadow-sm" style="background-color: #121409 !important;">
+          <a href="https://techjury.net/blog/scraping-for-ecommerce/">
+            <img src="static/images/work/brightdata_ecommerce.webp" target="_blank" alt="" class="img-fluid card-img-top">
+          </a>
+          <div class="p-4">
+            <h5 class="title-img-gallery" style="color: rgb(218, 218, 218);">Scraping for eCommerce: Extracting Product Data for Competitive Insights</h5>
+            <p class="small text-muted mb-0" style="color: #6e8923 !important;;">Technical writing about web scraping ecommerce products with Bright Data</p>
+            <div class="project-category" style="background-color: rgb(145, 87, 15); color: wheat">
+              <p>Technical Writing</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- End -->
+
+      <!-- Work item -->
+      <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
+        <div class="bg-white rounded shadow-sm" style="background-color: #121409 !important;">
           <a href="https://www.upwork.com/freelancers/~01185447baa36a1b77">
             <img src="static/images/work/upwork_image.webp" target="_blank" alt=""
               class="img-fluid card-img-top">
@@ -505,16 +522,18 @@
         </div>
       </div>
       <!-- End -->
-
+    </div>
+    <div>
       <!-- Work experience -->
-      <div class="icon-about-container" style="text-align: center; justify-items: center; margin: auto; margin-top: 2%;">
+      <div class="icon-about-container" style="text-align: center; margin: auto; margin-top: 2%;">
         <h3 class="subtitle" style="color: white !important;">Companies I've worked for</h3>
         <div class="icon-about-align">
           <p class="p-img-icon">
             <img alt="cnes" width="110px" src="static/images/jobs/cnes.webp" class="lang-img-icon" />
           </p>
           <p class="p-img-icon">
-            <img alt="teledyne" width="200px" src="static/images/jobs/teledyne.webp" class="lang-img-icon" style="padding-bottom: 12%;"/>
+            <img alt="teledyne" width="200px" src="static/images/jobs/teledyne.webp" class="lang-img-icon"
+              style="padding-bottom: 12%;" />
           </p>
         </div>
       </div>
